<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="items">Items</string>
    <string name="categories">Categories</string>
    <string name="units">Units</string>
    <string name="resources">Resources</string>
    <string name="setting">Setting</string>

    <string name="taxes">Taxes</string>
    <string name="discounts">Discounts</string>
    <string name="backups">Backups</string>

    <string name="app_name">Flex POS</string>
    <string name="app_version">Version %s</string>
    <string name="created_by">Created by Phyo Htet Arkar</string>

    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="select_color">Select Color</string>
    <string name="choose">Choose</string>
    <string name="hint_unit">Unit *</string>
    <string name="hint_name">Name *</string>
    <string name="hint_amount">Amount *</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_price">Price *</string>
    <string name="available_for_sale">Available For Sale</string>
    <string name="textView_title_product_image">Product Image</string>
    <string name="hint_category">Category *</string>
    <string name="textView_title_product_info">Product Info</string>
    <string name="app_mail">phyohtetarkar@gmail.com</string>
    <string name="no_data">No Data</string>
    <string name="pos">POS</string>
    <string name="receipts">Receipts</string>
    <string name="statistic">Statistic</string>

    <string name="confirm_message_delete">Are you sure to delete?</string>

    <string name="error_empty_input_format">%s must not empty</string>
    <string name="error_name_conflict_format">%s already exists</string>
    <string name="error_empty_choice">%s empty</string>
    <string name="error_not_valid">%s not valid</string>

    <string name="hint_remark">Remark</string>
    <string name="add_new">Add new</string>

    <string name="price">Price</string>
    <string name="basic_info">Basic Info</string>
    <string name="extra">Other</string>

    <string name="delete">Delete</string>
    <string name="assign_items">Assign Items</string>

    <string name="items_for_count">%s items</string>
    <string name="select_all">Select all</string>
    <string name="hint_quantity">Quantity *</string>

    <string name="confirm_yes">Yes</string>

    <string name="percent_symbol">%</string>
    <string name="_00">00</string>

    <string name="hint_value">value *</string>

    <string name="total_price">Total Price :</string>
    <string name="change">Change</string>
    <string name="fail_to_delete">Fail to delete %s</string>
    <string name="fail_to_save">Fail to save %s</string>
    <string name="off">off</string>
    <string name="new_sale">New Sale</string>
    <string name="finish">Finish</string>
    <string name="clear_all">Clear All</string>
    <string name="active_sale">Sale in progress. Please finish sale or clear items first</string>

    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="search_hint">Search…</string>
    
    <string name="edit_item">Edit Item</string>
    <string name="create_item">Create Item</string>
    <string name="edit_category">Edit Category</string>
    <string name="create_category">Create Category</string>
    <string name="edit_tax">Edit Tax</string>
    <string name="create_tax">Create Tax</string>
    <string name="edit_discount">Edit Discount</string>
    <string name="create_discount">Create Discount</string>
    <string name="receipt_detail">Receipt Detail</string>

    <string name="pref_receipt_header_summary">header name on receipt</string>
    <string name="pref_mail_subject_summary">mail subject for sending receipt</string>
    <string name="_99_plus">99+</string>
    <string name="about">About</string>
    <string name="rate_app">Rate this app</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="logo_by">Logo by flaticon.com</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="receipt">Receipt</string>

</resources>