<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_action_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_pos"
            android:icon="@drawable/ic_store_black"
            android:title="@string/pos" />

        <item
            android:id="@+id/action_resources"
            android:icon="@drawable/ic_view_list_black"
            android:title="@string/items" />

        <item
            android:id="@+id/action_taxes"
            android:icon="@drawable/ic_attach_money_black"
            android:title="@string/taxes"/>

        <item
            android:id="@+id/action_discounts"
            android:icon="@drawable/ic_local_offer_black"
            android:title="@string/discounts"/>

        <item
            android:id="@+id/action_receipts"
            android:icon="@drawable/ic_receipt_black"
            android:title="@string/receipts"/>

    </group>

    <group android:id="@+id/menu_action_extra_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/setting"/>

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_outline_black"
            android:checkable="false"
            android:title="@string/about"/>

        <item
            android:id="@+id/action_rate"
            android:icon="@drawable/ic_rate_review_black"
            android:checkable="false"
            android:title="@string/rate_app"/>

    </group>

</menu>