<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_dark"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_receipt"
        android:title="@string/receipt"
        android:orderInCategory="200"
        app:showAsAction="always"
        app:actionLayout="@layout/layout_receipt_noti"/>

    <item
        android:id="@+id/action_scan"
        android:title="@string/scan_barcode"
        android:orderInCategory="300"
        android:icon="@drawable/ic_crop_free_dark"
        app:showAsAction="never"/>

</menu>