<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="EditChargeBinding">

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.jsoft.pos.ui.views.charge.EditChargeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitePrimary"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jsoft.pos.ui.custom.CustomEditText
                android:id="@+id/edTaxName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:text="@={vm.charge.name}"
                app:layout_constraintBottom_toTopOf="@+id/edTaxValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.jsoft.pos.ui.custom.CustomEditText
                android:id="@+id/edTaxValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_value"
                android:inputType="numberDecimal"
                android:text="@={vm.charge.amount}"
                app:layout_constraintBottom_toTopOf="@+id/switch1"
                app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
                app:layout_constraintStart_toStartOf="@+id/edTaxName"
                app:layout_constraintTop_toBottomOf="@+id/edTaxName" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:checked="@={vm.charge.included, default=true}"
                android:fontFamily="@font/app_font_medium"
                android:text="Included in item price"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintBottom_toTopOf="@+id/btnAssignCharge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edTaxValue"
                app:layout_constraintTop_toBottomOf="@+id/edTaxValue"
                tools:checked="true" />

            <Button
                android:id="@+id/btnAssignCharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/selectable_outline_bordered_background"
                android:enabled="@{vm.assignBtnEnable}"
                android:text="@string/assign_items"
                android:textColor="@color/text_color_state"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/edTaxValue"
                app:layout_constraintEnd_toEndOf="@+id/edTaxName">

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-1.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_state_left_drawable"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/app_font_bold"
                    android:checked="@{vm.charge.percentage, default=true}"
                    android:onCheckedChanged="@{(rb, isChecked) -> vm.updateChargeMode(isChecked)}"
                    android:padding="12dp"
                    android:text="@string/percent_symbol"
                    android:textAlignment="center"
                    android:textColor="@drawable/toggle_text_drawable"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-1.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_state_right_drawable"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/app_font_bold"
                    android:checked="@{vm.charge.percentage == false}"
                    android:padding="12dp"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:textColor="@drawable/toggle_text_drawable"
                    android:textSize="18sp" />
            </RadioGroup>


        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/darkDivider" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/selectable_important_background"
            android:text="@string/delete"
            android:textColor="@color/whitePrimary"
            android:visibility="@{safeUnbox(vm.charge.id) > 0 ? View.VISIBLE : View.INVISIBLE}" />

    </LinearLayout>
</layout>